# Gyro_Tet

./: .gitignore  .gitmodules  CMakeLists.txt  Gyro_Tet.cpp  README.md
